--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
